add functionality to remove line

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>
           <input type="checkbox">
           <i class="glyphicon glyphicon-star"></i>
-          <span>Sweep kitchen</span>
+          <span id="tempTest">Sweep kitchen</span>
           <i class="glyphicon glyphicon-remove"></i>
         </p>
         <p>
